# unicode-codec

./: .gitignore  .mypy.ini  .pylintrc  Makefile  README.md  codec.py  pyproject.toml  unicodec.py
tests/: test_codec.py
